--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </filter>
   </svg>
   <div class="blob"></div>
-  <header>
+  <header id="header">
     <nav>
       <p>
         CREATIVE <br />
@@ -35,8 +35,8 @@
         </p>
 
         <p>
-          Available For Freelance <br />
-          Works From May 2023
+          AVAILABLE FOR FREELANCE<br />
+          WORKS FROM 2023
         </p>
 
         <button>
@@ -46,7 +46,7 @@
       </div>
     </nav>
 
-    <div class="hero-text">
+    <div class="hero-text" >
       <h2>
         CREATIVE DEVELOPER <br />
         & DIGITAL DESIGNER <br />
@@ -92,7 +92,7 @@
         <div class="expand">CLICK TO EXPAND</div>
         <div class="p-sec">
           <div class="p-d">
-            <h1>ARTME.</h1>
+            <h1>ARTME</h1>
             <div class="p-d_t">
               <span>NOV'22 - JAN'12</span>
               <br />
@@ -111,7 +111,7 @@
         <div class="expand">CLICK TO EXPAND</div>
         <div class="p-sec">
           <div class="p-d">
-            <h1>JP.</h1>
+            <h1>JUST PROJECTS</h1>
             <div class="p-d_t">
               <span>NOV'22 - JAN'12</span>
               <br />
@@ -130,7 +130,7 @@
         <div class="expand">CLICK TO EXPAND</div>
         <div class="p-sec">
           <div class="p-d">
-            <h1>STUDIO.</h1>
+            <h1>LOOP STUDIO</h1>
             <div class="p-d_t">
               <span>NOV'22 - JAN'12</span>
               <br />
@@ -149,7 +149,7 @@
         <div class="expand">CLICK TO EXPAND</div>
         <div class="p-sec">
           <div class="p-d">
-            <h1>+234.</h1>
+            <h1>PLUS-234</h1>
             <div class="p-d_t">
               <span>NOV'22 - JAN'12</span>
               <br />
@@ -185,7 +185,14 @@
       <span><a href="http://" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></span>
     </div>
 
-    <p>BACK TO TOP </p>
+    <a href="#header" style="display: flex; align-items: center; gap: 1em;">
+      BACK TO TOP 
+      <div class="arrow-container">
+      <span class="material-symbols-outlined" style="font-size: 1.5em;">
+        arrow_upward
+      </span>
+    </div>
+  </a>
   </footer>
 
 </div>
