--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
   <div class="about-c">
 
-    <p class="slide-up">
-      <span style="color: #aaa; ">
+    <p class="slide-2">
+      <span style="color: #eee; ">
         ABOUT <span style="color: #aaa; letter-spacing: -.3em;">----</span>
       </span>
       <span class="about">HEY</span> <span class="about">I'M </span> <span class="about">BERNARD</span> <span
@@ -82,54 +82,64 @@
       <span class="about">EXPIRIENCE</span> <span class="about">AND</span>
       <span class="about">SOLVE</span> <span class="about">PROBLEMS</span> <br>
       <span class="about">THROUGH</span> <span class="about">PRETTY</span> <span class="about">BUT</span> <span
-        class="about">EFFECTIVE</span> <br>
-      <span style="color: #aaa; letter-spacing: -.3em;" class="about">-------------</span> <span
+        class="about">EFFECTIVE</span> <br> <span
         class="about">DESIGNS</span> <span class="about">&
         DEVELOPMENT.</span>
     </p>
+
+    <p class="slide-2" style="margin-right: 25em;">
+      <span style="color: #eee; ">
+        WORKS <span style="color: #aaa; letter-spacing: -.3em;">----</span>
+      </span>
+      <span class="about">HERE</span> <span class="about">ARE</span> <span class="about">SOME</span> <span
+        class="about">MY</span> <br>
+      <span class="about">WORK</span> <span class="about">OVER</span> <span class="about">THE</span> <span
+        class="about">YEARS</span> <span class="about">ON</span> <br>
+      <span class="about">DIGITAL</span> <span class="about">DESIGNS</span>
+      <span class="about">AND</span><br>  <span class="about">DEVELOPMENT</span> <br>
+    </p>
+
   </div>
 
   <section id="works">
     <!-- <span class="line_right"></span>
     <span class="line_left"></span> -->
 
+    <div class="box"></div>
+
     <div class="box box-1">
-   <p>
+   <a href="https://thejustprojects.com/" class="img-1">
     THE JUST PROJECTS
-   </p>
+   </a>
+   <img src="/assets/loop-4.png" alt="">
     </div>
-
     <div class="box box-2">
-
+   <a href="https://thejustprojects.com/">
+    THE JUST PROJECTS
+   </a>
+    </div>
+    <div class="box box-3">
+   <a href="https://thejustprojects.com/">
+    THE JUST PROJECTS
+   </a>
+    </div>
+    <div class="box box-4">
+   <a href="https://thejustprojects.com/">
+    THE JUST PROJECTS
+   </a>
+    </div>
+    <div class="box box-5">
+   <a href="https://thejustprojects.com/">
+    THE JUST PROJECTS
+   </a>
+    </div>
+    <div class="box box-6">
+   <a href="https://thejustprojects.com/">
+    THE JUST PROJECTS
+   </a>
     </div>
 
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
-
-    <div class="box">
-
-    </div>
+   
 
 
 
