--- a/index.html
+++ b/index.html
@@ -1,183 +1,224 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="shortcut icon" href="/assets/ez-emoji.png" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BERNARD EZRA</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/works.css" />
+    <link rel="stylesheet" href="./css/media.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
+      integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+      defer
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"
+      integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="./js/index.js" defer></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <link rel="shortcut icon" href="/assets/ez-emoji.png" type="image/x-icon" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BERNARD EZRA</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="./css/works.css" />
-  <link rel="stylesheet" href="./css/media.css">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"
-    integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"
-    integrity="sha512-AMl4wfwAmDM1lsQvVBBRHYENn1FR8cfOTpt8QVbb/P55mYOdahHD4LmHM1W55pNe3j/3od8ELzPf/8eNkkjISQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="./js/index.js" defer></script>
-</head>
-
-<body>
-  <svg>
-    <filter id="grainy">
-      <feTurbulence type="turbulence" baseFrequency="0.65" />
-    </filter>
-  </svg>
-  <div class="blob"></div>
-  <header id="header">
-    <nav>
-      <p class="nav-p">
-        EZZRRAA <br />
-        BERNARD
-      </p>
-      <div>
+  <body>
+    <div class="blob"></div>
+    <header id="header">
+      <nav>
         <p class="nav-p">
-          DEVELOPER & DESIGNER <br /> PORTFOLO /
-          2023 - 2025
+          SENAMI <br />
+          SOUKOU
         </p>
+        <div>
+          <p class="nav-p">
+            DEVELOPER & DESIGNER <br />
+            PORTFOLO / 2023 - 2025
+          </p>
 
-        <p class="nav-p">
-          AVAILABLE FOR FREELANCE<br />
-          WORKS FROM 2023
-        </p>
+          <p class="nav-p">
+            AVAILABLE FOR FREELANCE<br />
+            WORKS FROM 2023
+          </p>
 
-        <button class="nav-p">
-          <div class="bg"></div>
-          CONTACT
-        </button>
+          <button class="nav-p">
+            <div class="bg"></div>
+            CONTACT
+          </button>
+        </div>
+      </nav>
+
+      <div class="hero_section">
+        <div
+          class="hero_container_1"
+          style="letter-spacing: -0.01em; overflow: hidden; padding: 0.6em 0"
+        >
+          <p class="hero_txt_1">SENAMI SOUKOU</p>
+        </div>
+
+        <div class="hero_container_2">
+          <span class="side_line"></span>
+          <ul class="slide-up">
+            <li><a href="">LINKEDN</a></li>
+            <li><a href="">GITHUB</a></li>
+            <li><a href="">INSTAGRAM</a></li>
+          </ul>
+          <div class="scroll-down slide-up">
+            <a href="#about">SCOLL DOWN</a>
+            <div class="arrow-container">
+              <span class="material-symbols-outlined"> arrow_downward </span>
+            </div>
+          </div>
+        </div>
       </div>
-    </nav>
+    </header>
 
-    <div class="hero-text">
-      <h2>
-        <div class="hero_txt_1" style="letter-spacing: -.01em;">CREATIVE DEVELOPER</div>
-        <div class="hero_txt_2">& DIGITAL - DESIGNER</div>
-        <!-- BASED IN LAGOS, NG -->
-      </h2>
-    </div>
-    <div class="scroll-down slide-up">
-      SCOLL DOWN
-      <div class="arrow-container">
-        <span class="material-symbols-outlined" style="font-size: 1.5em">
-          arrow_downward
+    <div class="about-c" id="about">
+      <p class="slide-2">
+        <span style="color: #eee">
+          ABOUT <span style="color: #aaa; letter-spacing: -0.3em">----</span>
         </span>
-      </div>
+        <span class="about">HEY</span> <span class="about">I'M </span>
+        <span class="about">BERNARD</span> <span class="about">EZRA,</span>
+        <br />
+        <span class="about">AM</span> <span class="about">A</span>
+        <span class="about">CREATIVE</span> <span class="about">SOFTWARE</span>
+        <span class="about">DEVELOPER</span>
+        <span class="about">&</span> <br /><span class="about">DIGITAL</span>
+        <span class="about">DESIGNER</span> <span class="about">BASED</span>
+        <span class="about">IN</span> <span class="about">LAGOS,</span
+        ><span class="about">NG</span> <br />
+        <span class="about"
+          >FOCUSED       </span
+        ><span class="about">IN</span>
+        <span class="about">CREATIING</span> <span class="about">INTERACTIVE</span> <br>
+        <span class="about">DIGITAL</span> <span class="about">EXPERIENCE</span>
+        <span class="about">FOR</span> <span class="about">THE</span>
+        <span class="about">WEB.</span>
+      </p>
+
+      <p class="slide-2">
+        <span class="about">OVER</span> <span class="about">THE</span>
+        <span class="about">YEARS</span> <span class="about">I</span> 
+        <span class="about">HAVE</span> <span class="about">WORKED</span>
+        <span class="about">WITH</span><br> <span class="about">SOME</span>
+        <span class="about">STARTUPS</span>
+        <span class="about">AS A</span> <span class="about">FRONT-END</span>
+        <span class="about">AND</span> <br>
+        <span class="about">BACKEND DEVELOPER,</span>
+        <span class="about">I AM</span>
+        <span class="about">CURRENTLY <br> DEVELOPING</span>
+        <span class="about">MY SKILL</span>
+        <span class="about">AS A DIGITAL</span> <br>
+        <span class="about">DESIGNER.</span>
+      </p>
     </div>
-  </header>
 
-  <div class="about-c">
-
-    <p class="slide-2">
-      <span style="color: #eee; ">
-        ABOUT <span style="color: #aaa; letter-spacing: -.3em;">----</span>
-      </span>
-      <span class="about">HEY</span> <span class="about">I'M </span> <span class="about">BERNARD</span> <span
-        class="about">EZRA,</span> <br>
-      <span class="about">I</span> <span class="about">CREATE</span> <span class="about">LONG</span> <span
-        class="about">LASTING</span> <span class="about">DIGITAL</span> <br>
-      <span class="about">EXPIRIENCE</span> <span class="about">AND</span>
-      <span class="about">SOLVE</span> <span class="about">PROBLEMS</span> <br>
-      <span class="about">THROUGH</span> <span class="about">PRETTY</span> <span class="about">BUT</span> <span
-        class="about">EFFECTIVE</span> <br> <span
-        class="about">DESIGNS</span> <span class="about">&
-        DEVELOPMENT.</span>
-    </p>
-
-    <p class="slide-2" style="margin-right: 25em;">
-      <span style="color: #eee; ">
-        WORKS <span style="color: #aaa; letter-spacing: -.3em;">----</span>
-      </span>
-      <span class="about">HERE</span> <span class="about">ARE</span> <span class="about">SOME</span> <span
-        class="about">MY</span> <br>
-      <span class="about">WORK</span> <span class="about">OVER</span> <span class="about">THE</span> <span
-        class="about">YEARS</span> <span class="about">ON</span> <br>
-      <span class="about">DIGITAL</span> <span class="about">DESIGNS</span>
-      <span class="about">AND</span><br>  <span class="about">DEVELOPMENT</span> <br>
-    </p>
-
-  </div>
-
-  <section id="works">
-    <!-- <span class="line_right"></span>
+    <section id="works">
+      <!-- 
     <span class="line_left"></span> -->
 
-    <div class="box"></div>
-
-    <div class="box box-1">
-   <a href="https://thejustprojects.com/" class="img-1">
-    THE JUST PROJECTS
-   </a>
-   <img src="/assets/loop-4.png" alt="">
-    </div>
-    <div class="box box-2">
-   <a href="https://thejustprojects.com/">
-    THE JUST PROJECTS
-   </a>
-    </div>
-    <div class="box box-3">
-   <a href="https://thejustprojects.com/">
-    THE JUST PROJECTS
-   </a>
-    </div>
-    <div class="box box-4">
-   <a href="https://thejustprojects.com/">
-    THE JUST PROJECTS
-   </a>
-    </div>
-    <div class="box box-5">
-   <a href="https://thejustprojects.com/">
-    THE JUST PROJECTS
-   </a>
-    </div>
-    <div class="box box-6">
-   <a href="https://thejustprojects.com/">
-    THE JUST PROJECTS
-   </a>
-    </div>
-
-   
-
-
-
-  </section>
-
-  <div class="contact">
-    <h2>
-      DON'T HESITATE <BR>
-      LET'S GET IN TOUCH.
-      <span class="material-symbols-outlined"
-        style="font-size: 2rem; transform: rotate(90deg) translateX(40%); font-weight: 900; scale: 2;">
-        forward
-      </span>
-    </h2>
-    <footer>
-      <p>LAGOS, NG <span class="time"></span></p>
-
-
-
-      <div class="f-links">
-        <span><a href="http://" target="_blank" rel="noopener noreferrer">TWITTER</a></span>
-        <span><a href="http://" target="_blank" rel="noopener noreferrer">LINKEDN</a></span>
-        <span><a href="http://" target="_blank" rel="noopener noreferrer">GITHUB</a></span>
-        <span><a href="http://" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></span>
-      </div>
-
-      <a href="#header" style="display: flex; align-items: center; gap: 1em;">
-        BACK TO TOP
-        <div class="arrow-container">
-          <span class="material-symbols-outlined" style="font-size: 1.5em;">
-            arrow_upward
-          </span>
-        </div>
+      <a href="http://thejustprojects.com" target="_blank" rel="noopener noreferrer" class="box">
+        <div class="img">
+          <img src="/assets/artme1.png" alt="" />
+         </div>
+         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
+        <span class="w-header"> THE JUST PROJECTS </span>
+        <span class="line_right"></span>
       </a>
-    </footer>
+      <a href="http://loopstudio.site" target="_blank" rel="noopener noreferrer" class="box">
+        <div class="img">
+          <img src="/assets/loop2.png" alt="" />
+         </div>
+         <span>WEB PORTFOLIO FOR A WEB DESIGN AGENCY</span>
+        <span class="w-header"> LOOP STUDIO </span>
+        <span class="line_right"></span>
+      </a>
+      <a href="http://store234.onrender.com/" target="_blank" rel="noopener noreferrer" class="box">
+        <div class="img">
+          <img src="/assets/2341.png" alt="" />
+         </div>
+         <span>E-CORMMERCE STORE FOR A CLOTHING BRAND</span>
+        <span class="w-header"> PLUS 234 STORE </span>
+        <span class="line_right"></span>
+      </a>
+      <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
+        <div class="img">
+          <img src="/assets/artme1.png" alt="" />
+         </div>
+         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
+        <span class="w-header"> THE JUST PROJECTS </span>
+        <span class="line_right"></span>
+      </a>
+      <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
+        <div class="img">
+          <img src="/assets/artme1.png" alt="" />
+         </div>
+         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
+        <span> THE JUST PROJECTS </span>
+        <span class="line_right"></span>
+      </a>
+    </section>
 
-  </div>
+    <div class="contact">
+      
+      <h2>
+        DON'T HESITATE <br />
+        LET'S GET IN TOUCH.
+        <span
+          class="material-symbols-outlined"
+          style="
+            font-size: 2rem;
+            transform: rotate(90deg) translateX(40%);
+            font-weight: 900;
+            scale: 2;
+          "
+        >
+          forward
+        </span>
+      </h2>
+      <footer>
+        <p>LAGOS, NG <span class="time"></span></p>
 
-</body>
+        <div class="f-links">
+          <span
+            ><a href="http://" target="_blank" rel="noopener noreferrer"
+              >TWITTER</a
+            ></span
+          >
+          <span
+            ><a href="http://" target="_blank" rel="noopener noreferrer"
+              >LINKEDN</a
+            ></span
+          >
+          <span
+            ><a href="http://" target="_blank" rel="noopener noreferrer"
+              >GITHUB</a
+            ></span
+          >
+          <span
+            ><a href="http://" target="_blank" rel="noopener noreferrer"
+              >INSTAGRAM</a
+            ></span
+          >
+        </div>
 
+        <a href="#header" style="display: flex; align-items: center; gap: 1em">
+          BACK TO TOP
+          <div class="arrow-container">
+            <span class="material-symbols-outlined" style="font-size: 1.5em">
+              arrow_upward
+            </span>
+          </div>
+        </a>
+      </footer>
+    </div>
+  </body>
 </html>
