--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="/assets/ez-emoji.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/ez-emoji.png" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BERNARD EZRA</title>
     <link rel="stylesheet" href="style.css" />
@@ -127,7 +127,7 @@
 
       <a href="http://thejustprojects.com" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="/assets/artme1.png" alt="" />
+          <img src="./assets/artme1.png" alt="" />
          </div>
          <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span class="w-header"> THE JUST PROJECTS </span>
@@ -135,7 +135,7 @@
       </a>
       <a href="http://loopstudio.site" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="/assets/loop2.png" alt="" />
+          <img src="./assets/loop2.png" alt="" />
          </div>
          <span>WEB PORTFOLIO FOR A WEB DESIGN AGENCY</span>
         <span class="w-header"> LOOP STUDIO </span>
@@ -143,7 +143,7 @@
       </a>
       <a href="http://store234.onrender.com/" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="/assets/2341.png" alt="" />
+          <img src="./assets/2341.png" alt="" />
          </div>
          <span>E-CORMMERCE STORE FOR A CLOTHING BRAND</span>
         <span class="w-header"> PLUS 234 STORE </span>
@@ -151,7 +151,7 @@
       </a>
       <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="/assets/artme1.png" alt="" />
+          <img src="./assets/artme1.png" alt="" />
          </div>
          <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span class="w-header"> THE JUST PROJECTS </span>
@@ -159,7 +159,7 @@
       </a>
       <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="/assets/artme1.png" alt="" />
+          <img src="./assets/artme1.png" alt="" />
          </div>
          <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span> THE JUST PROJECTS </span>
