--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="blob"></div>
     <header id="header">
       <nav>
-        <p class="nav-p">
+        <p class="nav-p interactable">
           SENAMI <br />
           SOUKOU
         </p>
@@ -50,7 +50,7 @@
 
           <button class="nav-p">
             <div class="bg"></div>
-            CONTACT
+            <a href="http://mailto:bernardezra112@gmail.com" target="_blank" rel="noopener noreferrer">CONTACT</a>
           </button>
         </div>
       </nav>
@@ -59,7 +59,7 @@
         <div
           class="hero_container_1"
         >
-          <p class="hero_txt_1">SENAMI SOUKOU</p>
+          <p class="hero_txt_1 interactable">SENAMI SOUKOU</p>
         </div>
 
         <div class="hero_container_2">
@@ -80,7 +80,7 @@
     </header>
 
     <div class="about-c" id="about">
-      <p class="slide-2">
+      <p class="slide-2 interactable">
         <span style="color: #eee">
           ABOUT <span style="color: #aaa; letter-spacing: -0.3em">----</span>
         </span>
@@ -103,7 +103,7 @@
         <span class="about">WEB.</span>
       </p>
 
-      <p class="slide-2">
+      <p class="slide-2 interactable">
         <span class="about">OVER</span> <span class="about">THE</span>
         <span class="about">YEARS</span> <span class="about">I</span> 
         <span class="about">HAVE</span> <span class="about">WORKED</span>
