--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div
           class="hero_container_1"
         >
-          <p class="hero_txt_1 interactable">SENAMI SOUKOU</p>
+          <p class="hero_txt_1 interactable">PROJECTS FOLIO</p>
         </div>
 
         <div class="hero_container_2">
