--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
           <img src="./assets/artme1.png" alt="" />
          </div>
          <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
-        <span> THE JUST PROJECTS </span>
+         <span class="w-header"> THE JUST PROJECTS </span>
         <span class="line_right"></span>
       </a>
     </section>
 
     <div class="contact">
       
-      <h2>
+      <!-- <h2>
         DON'T HESITATE <br />
         LET'S GET IN TOUCH.
         <span
@@ -182,7 +182,20 @@
         >
           forward
         </span>
-      </h2>
+      </h2> -->
+
+      <a href="http://" target="_blank" rel="noopener noreferrer" class="marque_container">
+        <div class="marque">
+          <span>
+            WANNA BE STARTING SOMETHING? SAY HELLO
+          </span>
+          <span>-</span>
+          <span> 
+            WANNA BE STARTING SOMETHING? SAY HELLO
+          </span>
+        </div>
+      </a>
+
       <footer>
         <p>LAGOS, NG <span class="time"></span></p>
 
