add media links

--- a/index.html
+++ b/index.html
@@ -86,18 +86,17 @@
         </span>
         <span class="about">HEY</span> <span class="about">I'M </span>
         <span class="about">BERNARD</span> <span class="about">EZRA,</span>
-        <br />
         <span class="about">AM</span> <span class="about">A</span>
         <span class="about">CREATIVE</span> <span class="about">SOFTWARE</span>
         <span class="about">DEVELOPER</span>
-        <span class="about">&</span> <br /><span class="about">DIGITAL</span>
+        <span class="about">&</span> <span class="about">DIGITAL</span>
         <span class="about">DESIGNER</span> <span class="about">BASED</span>
         <span class="about">IN</span> <span class="about">LAGOS,</span
-        ><span class="about">NG</span> <br />
+        ><span class="about">NG</span> 
         <span class="about"
           >FOCUSED       </span
         ><span class="about">IN</span>
-        <span class="about">CREATIING</span> <span class="about">INTERACTIVE</span> <br>
+        <span class="about">CREATIING</span> <span class="about">INTERACTIVE</span> 
         <span class="about">DIGITAL</span> <span class="about">EXPERIENCE</span>
         <span class="about">FOR</span> <span class="about">THE</span>
         <span class="about">WEB.</span>
@@ -107,15 +106,15 @@
         <span class="about">OVER</span> <span class="about">THE</span>
         <span class="about">YEARS</span> <span class="about">I</span> 
         <span class="about">HAVE</span> <span class="about">WORKED</span>
-        <span class="about">WITH</span><br> <span class="about">SOME</span>
+        <span class="about">WITH</span><span class="about">SOME</span>
         <span class="about">STARTUPS</span>
         <span class="about">AS A</span> <span class="about">FRONT-END</span>
-        <span class="about">AND</span> <br>
+        <span class="about">AND</span> 
         <span class="about">BACKEND DEVELOPER,</span>
         <span class="about">I AM</span>
-        <span class="about">CURRENTLY <br> DEVELOPING</span>
+        <span class="about">CURRENTLY  DEVELOPING</span>
         <span class="about">MY SKILL</span>
-        <span class="about">AS A DIGITAL</span> <br>
+        <span class="about">AS A DIGITAL</span>
         <span class="about">DESIGNER.</span>
       </p>
     </div>
@@ -201,22 +200,22 @@
 
         <div class="f-links">
           <span
-            ><a href="http://" target="_blank" rel="noopener noreferrer"
+            ><a href="https://twitter.com/bernardEzra2" target="_blank" rel="noopener noreferrer"
               >TWITTER</a
             ></span
           >
           <span
-            ><a href="http://" target="_blank" rel="noopener noreferrer"
+            ><a href="https://www.linkedin.com/in/ezra-soukou-b2941b240" target="_blank" rel="noopener noreferrer"
               >LINKEDN</a
             ></span
           >
           <span
-            ><a href="http://" target="_blank" rel="noopener noreferrer"
+            ><a href="https://github.com/just-ez" target="_blank" rel="noopener noreferrer"
               >GITHUB</a
             ></span
           >
           <span
-            ><a href="http://" target="_blank" rel="noopener noreferrer"
+            ><a href="https://www.instagram.com/ezthedevelop3r/" target="_blank" rel="noopener noreferrer"
               >INSTAGRAM</a
             ></span
           >
