--- a/index.html
+++ b/index.html
@@ -65,9 +65,21 @@
         <div class="hero_container_2">
           <span class="side_line"></span>
           <ul class="slide-up">
-            <li><a href="">LINKEDN</a></li>
-            <li><a href="">GITHUB</a></li>
-            <li><a href="">INSTAGRAM</a></li>
+            <li
+            ><a href="https://www.linkedin.com/in/ezra-soukou-b2941b240" target="_blank" rel="noopener noreferrer"
+              >LINKEDN</a
+            ></li
+          >
+          <li
+            ><a href="https://github.com/just-ez" target="_blank" rel="noopener noreferrer"
+              >GITHUB</a
+            ></li
+          >
+          <li
+            ><a href="https://www.instagram.com/ezthedevelop3r/" target="_blank" rel="noopener noreferrer"
+              >INSTAGRAM</a
+            ></li
+          >
           </ul>
           <div class="scroll-down slide-up">
             <a href="#about">SCOLL DOWN</a>
@@ -82,7 +94,7 @@
     <div class="about-c" id="about">
       <p class="slide-2 interactable">
         <span style="color: #eee">
-          ABOUT <span style="color: #aaa; letter-spacing: -0.3em">----</span>
+          ABOUT <span style="color: #aaa; letter-spacing: -0.3em bor" ></span> <br>
         </span>
         <span class="about">HEY</span> <span class="about">I'M </span>
         <span class="about">BERNARD</span> <span class="about">EZRA,</span>
