--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </span>
       </h2> -->
 
-      <a href="http://" target="_blank" rel="noopener noreferrer" class="marque_container">
+      <a href="http://mailto:bernardezra112@gmail.com" target="_blank" rel="noopener noreferrer" class="marque_container">
         <div class="marque">
           <span>
             WANNA BE STARTING SOMETHING? SAY HELLO
