--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="about-c" id="about">
       <p class="slide-2 interactable">
         <span style="color: #eee">
-          ABOUT <span style="color: #aaa; letter-spacing: -0.3em bor" ></span> <br>
+          (about) <span style="color: #aaa; letter-spacing: -0.3em bor" ></span> <br><br>
         </span>
         <span class="about">HEY</span> <span class="about">I'M </span>
         <span class="about">BERNARD</span> <span class="about">EZRA,</span>
@@ -131,6 +131,9 @@
       </p>
     </div>
 
+      <span style="color: #eee; font-size: 2em; margin-left: 6.5em;">
+          (works) <br><br>
+        </span>
     <section id="works">
       <!-- 
     <span class="line_left"></span> -->
