--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
       <a href="http://thejustprojects.com" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="./assets/artme1.png" alt="" />
+          <img src="./assets/jp.png" alt="" />
          </div>
          <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span class="w-header"> THE JUST PROJECTS </span>
@@ -166,8 +166,8 @@
         <div class="img">
           <img src="./assets/artme1.png" alt="" />
          </div>
-         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
-        <span class="w-header"> THE JUST PROJECTS </span>
+         <span>ARTME IS AN ONLINE PLATFORM MADE FOR ARTIST TO SHOWCASE, SELL, COMMUNICATE AND COLLABORATE WITH OTHER ARTISTS</span>
+        <span class="w-header"> ARTME </span>
         <span class="line_right"></span>
       </a>
       <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
