--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
         ><span class="about">NG</span> 
         <span class="about"
           >FOCUSED       </span
-        ><span class="about">IN</span>
-        <span class="about">CREATIING</span> <span class="about">INTERACTIVE</span> 
+        ><span class="about">ON</span>
+        <span class="about">CREATING</span> <span class="about">INTERACTIVE</span> 
         <span class="about">DIGITAL</span> <span class="about">EXPERIENCE</span>
         <span class="about">FOR</span> <span class="about">THE</span>
         <span class="about">WEB.</span>
