--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           >
           </ul>
           <div class="scroll-down slide-up">
-            <a href="#about">SCOLL DOWN</a>
+            <a href="#about">SCROLL DOWN</a>
             <div class="arrow-container">
               <span class="material-symbols-outlined" > arrow_downward </span>
             </div>
@@ -97,14 +97,14 @@
           (about) <span style="color: #aaa; letter-spacing: -0.3em bor" ></span> <br><br>
         </span>
         <span class="about">HEY</span> <span class="about">I'M </span>
-        <span class="about">BERNARD</span> <span class="about">EZRA,</span>
-        <span class="about">AM</span> <span class="about">A</span>
+        <span class="about">BERNARD</span> <span class="about">EZRA.</span>
+        <span class="about">I'M</span> <span class="about">A</span>
         <span class="about">CREATIVE</span> <span class="about">SOFTWARE</span>
         <span class="about">DEVELOPER</span>
         <span class="about">&</span> <span class="about">DIGITAL</span>
         <span class="about">DESIGNER</span> <span class="about">BASED</span>
         <span class="about">IN</span> <span class="about">LAGOS,</span
-        ><span class="about">NG</span> 
+        ><span class="about">NIGERIA</span> 
         <span class="about"
           >FOCUSED       </span
         ><span class="about">ON</span>
@@ -118,11 +118,11 @@
         <span class="about">OVER</span> <span class="about">THE</span>
         <span class="about">YEARS</span> <span class="about">I</span> 
         <span class="about">HAVE</span> <span class="about">WORKED</span>
-        <span class="about">WITH</span><span class="about">SOME</span>
+        <span class="about">WITH</span><span class="about"> SOME</span>
         <span class="about">STARTUPS</span>
         <span class="about">AS A</span> <span class="about">FRONT-END</span>
         <span class="about">AND</span> 
-        <span class="about">BACKEND DEVELOPER,</span>
+        <span class="about">BACKEND DEVELOPER.</span>
         <span class="about">I AM</span>
         <span class="about">CURRENTLY  DEVELOPING</span>
         <span class="about">MY SKILL</span>
