--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="about-c" id="about">
       <p class="slide-2 interactable">
         <span style="color: #eee">
-          (about) <span style="color: #aaa; letter-spacing: -0.3em bor" ></span> <br><br>
+          (about)  <br><br>
         </span>
         <span class="about">HEY</span> <span class="about">I'M </span>
         <span class="about">BERNARD</span> <span class="about">EZRA.</span>
@@ -106,7 +106,7 @@
         <span class="about">IN</span> <span class="about">LAGOS,</span
         ><span class="about">NIGERIA</span> 
         <span class="about"
-          >FOCUSED       </span
+          >FOCUSED </span
         ><span class="about">ON</span>
         <span class="about">CREATING</span> <span class="about">INTERACTIVE</span> 
         <span class="about">DIGITAL</span> <span class="about">EXPERIENCE</span>
@@ -142,7 +142,7 @@
         <div class="img">
           <img src="./assets/jp.png" alt="" />
          </div>
-         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
+         <span>BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span class="w-header"> THE JUST PROJECTS </span>
         <span class="line_right"></span>
       </a>
@@ -166,7 +166,7 @@
         <div class="img">
           <img src="./assets/artme1.png" alt="" />
          </div>
-         <span>ARTME IS AN ONLINE PLATFORM MADE FOR ARTIST TO SHOWCASE, SELL, COMMUNICATE AND COLLABORATE WITH OTHER ARTISTS</span>
+         <span>ONLINE PLATFORM MADE FOR ARTIST (still working on it)</span>
         <span class="w-header"> ARTME </span>
         <span class="line_right"></span>
       </a>
