--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="shortcut icon" href="./assets/ez-emoji.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./assets/ez-emoji.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BERNARD EZRA</title>
     <link rel="stylesheet" href="style.css" />
@@ -31,6 +35,18 @@
 
   <body>
     <div class="blob"></div>
+    <div class="loader">
+      <div class="loading_bar">
+        <span>↓</span>
+        <span style="--delay: 0.1s">↓</span>
+        <span style="--delay: 0.3s">↓</span>
+        <span style="--delay: 0.4s">↓</span>
+        <span style="--delay: 0.5s">↓</span>
+        <p>PLEASE WAIT...</p>
+      </div>
+      <div class="stagger"></div>
+      <div class="stagger"></div>
+    </div>
     <header id="header">
       <nav>
         <p class="nav-p interactable">
@@ -50,138 +66,168 @@
 
           <button class="nav-p">
             <div class="bg"></div>
-            <a href="http://mailto:bernardezra112@gmail.com" target="_blank" rel="noopener noreferrer">CONTACT</a>
+            <a
+              href="http://mailto:bernardezra112@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              >CONTACT</a
+            >
           </button>
         </div>
       </nav>
 
       <div class="hero_section">
-        <div
-          class="hero_container_1"
-        >
+        <div class="hero_container_1">
           <p class="hero_txt_1 interactable">PROJECTS FOLIO</p>
         </div>
 
         <div class="hero_container_2">
           <span class="side_line"></span>
           <ul class="slide-up">
-            <li
-            ><a href="https://www.linkedin.com/in/ezra-soukou-b2941b240" target="_blank" rel="noopener noreferrer"
-              >LINKEDN</a
-            ></li
-          >
-          <li
-            ><a href="https://github.com/just-ez" target="_blank" rel="noopener noreferrer"
-              >GITHUB</a
-            ></li
-          >
-          <li
-            ><a href="https://www.instagram.com/ezthedevelop3r/" target="_blank" rel="noopener noreferrer"
-              >INSTAGRAM</a
-            ></li
-          >
+            <li>
+              <a
+                href="https://www.linkedin.com/in/ezra-soukou-b2941b240"
+                target="_blank"
+                rel="noopener noreferrer"
+                >LINKEDN</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/just-ez"
+                target="_blank"
+                rel="noopener noreferrer"
+                >GITHUB</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.instagram.com/ezthedevelop3r/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >INSTAGRAM</a
+              >
+            </li>
           </ul>
           <div class="scroll-down slide-up">
             <a href="#about">SCROLL DOWN</a>
             <div class="arrow-container">
-              <span class="material-symbols-outlined" > arrow_downward </span>
+              <span class="material-symbols-outlined"> arrow_downward </span>
             </div>
           </div>
         </div>
       </div>
     </header>
- 
+
     <div class="about-c" id="about">
-      <p class="slide-2 interactable">
-        <span style="color: #eee">
-          (about)  <br><br>
+      <p class="slide-1 interactable">
+        <span style="color: rgba(158, 43, 2, 0.749)">
+          (about) <br /><br />
         </span>
-        <span class="about">HEY</span> <span class="about">I'M </span>
-        <span class="about">BERNARD</span> <span class="about">EZRA.</span>
-        <span class="about">I'M</span> <span class="about">A</span>
-        <span class="about">CREATIVE</span> <span class="about">SOFTWARE</span>
-        <span class="about">DEVELOPER</span>
-        <span class="about">&</span> <span class="about">DIGITAL</span>
-        <span class="about">DESIGNER</span> <span class="about">BASED</span>
-        <span class="about">IN</span> <span class="about">LAGOS,</span
-        ><span class="about">NIGERIA</span> 
-        <span class="about"
-          >FOCUSED </span
-        ><span class="about">ON</span>
-        <span class="about">CREATING</span> <span class="about">INTERACTIVE</span> 
-        <span class="about">DIGITAL</span> <span class="about">EXPERIENCE</span>
-        <span class="about">FOR</span> <span class="about">THE</span>
-        <span class="about">WEB.</span>
+        <span>HEY</span> <span>I'M </span>
+        <span>BERNARD</span> <span>EZRA.</span>
+        <span>I'M</span> <span>A</span>
+        <span>CREATIVE</span> <span>SOFTWARE</span>
+        <span>DEVELOPER</span>
+        <span>&</span> <span>DIGITAL</span>
+        <span>DESIGNER</span> <span>BASED</span>
+        <span>IN</span> <span>LAGOS,</span
+        ><span>NIGERIA</span> <span>FOCUSED </span
+        ><span>ON</span> <span>CREATING</span>
+        <span>INTERACTIVE</span>
+        <span>DIGITAL</span>
+        <span>EXPERIENCE</span> <span>FOR</span>
+        <span>THE</span>
+        <span>WEB.</span>
       </p>
 
       <p class="slide-2 interactable">
-        <span class="about">OVER</span> <span class="about">THE</span>
-        <span class="about">YEARS</span> <span class="about">I</span> 
-        <span class="about">HAVE</span> <span class="about">WORKED</span>
-        <span class="about">WITH</span><span class="about"> SOME</span>
-        <span class="about">STARTUPS</span>
-        <span class="about">AS A</span> <span class="about">FRONT-END</span>
-        <span class="about">AND</span> 
-        <span class="about">BACKEND DEVELOPER.</span>
-        <span class="about">I AM</span>
-        <span class="about">CURRENTLY  DEVELOPING</span>
-        <span class="about">MY SKILL</span>
-        <span class="about">AS A DIGITAL</span>
-        <span class="about">DESIGNER.</span>
+        <span>OVER</span> <span>THE</span>
+        <span>YEARS</span> <span>I</span>
+        <span>HAVE</span> <span>WORKED</span>
+        <span>WITH</span><span> SOME</span>
+        <span>STARTUPS</span>
+        <span>AS A</span> <span>FRONT-END</span>
+        <span>AND</span>
+        <span>BACKEND DEVELOPER.</span>
+        <span>I AM</span>
+        <span>CURRENTLY DEVELOPING</span>
+        <span>MY SKILL</span>
+        <span>AS A DIGITAL</span>
+        <span>DESIGNER.</span>
       </p>
     </div>
 
-      <span style="color: #eee; font-size: 2em; margin-left: 6.5em;">
-          (works) <br><br>
-        </span>
+    <!-- <span
+      style="color: rgba(158, 43, 2, 0.749); font-size: 2em; margin-left: 6.5em"
+    >
+      (works) <br /><br />
+    </span> -->
     <section id="works">
       <!-- 
     <span class="line_left"></span> -->
 
-      <a href="http://thejustprojects.com" target="_blank" rel="noopener noreferrer" class="box">
+      <a
+        href="http://thejustprojects.com"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="box"
+      >
         <div class="img">
           <img src="./assets/jp.png" alt="" />
-         </div>
-         <span>BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
+        </div>
+        <span>BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
         <span class="w-header"> THE JUST PROJECTS </span>
         <span class="line_right"></span>
       </a>
-      <a href="http://loopstudio.site" target="_blank" rel="noopener noreferrer" class="box">
+      <a
+        href="http://loopstudio.site"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="box"
+      >
         <div class="img">
           <img src="./assets/loop2.png" alt="" />
-         </div>
-         <span>WEB PORTFOLIO FOR A WEB DESIGN AGENCY</span>
+        </div>
+        <span>WEB PORTFOLIO FOR A WEB DESIGN AGENCY</span>
         <span class="w-header"> LOOP STUDIO </span>
         <span class="line_right"></span>
       </a>
-      <a href="http://store234.onrender.com/" target="_blank" rel="noopener noreferrer" class="box">
+      <a
+        href="http://store234.onrender.com/"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="box"
+      >
         <div class="img">
           <img src="./assets/2341.png" alt="" />
-         </div>
-         <span>E-CORMMERCE STORE FOR A CLOTHING BRAND</span>
+        </div>
+        <span>E-CORMMERCE STORE FOR A CLOTHING BRAND</span>
         <span class="w-header"> PLUS 234 STORE </span>
         <span class="line_right"></span>
       </a>
       <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
           <img src="./assets/artme1.png" alt="" />
-         </div>
-         <span>ONLINE PLATFORM MADE FOR ARTIST (still working on it)</span>
+        </div>
+        <span>ONLINE PLATFORM MADE FOR ARTIST (still working on it)</span>
         <span class="w-header"> ARTME </span>
         <span class="line_right"></span>
       </a>
       <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
           <img src="./assets/artme1.png" alt="" />
-         </div>
-         <span>TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX - DESIGN</span>
-         <span class="w-header"> THE JUST PROJECTS </span>
+        </div>
+        <span
+          >TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX
+          - DESIGN</span
+        >
+        <span class="w-header"> THE JUST PROJECTS </span>
         <span class="line_right"></span>
       </a>
     </section>
 
     <div class="contact">
-      
       <!-- <h2>
         DON'T HESITATE <br />
         LET'S GET IN TOUCH.
@@ -198,15 +244,16 @@
         </span>
       </h2> -->
 
-      <a href="http://mailto:bernardezra112@gmail.com" target="_blank" rel="noopener noreferrer" class="marque_container">
+      <a
+        href="http://mailto:bernardezra112@gmail.com"
+        target="_blank"
+        rel="noopener noreferrer"
+        class="marque_container"
+      >
         <div class="marque">
-          <span>
-            WANNA BE STARTING SOMETHING? SAY HELLO
-          </span>
+          <span> WANNA BE STARTING SOMETHING? SAY HELLO </span>
           <span>-</span>
-          <span> 
-            WANNA BE STARTING SOMETHING? SAY HELLO
-          </span>
+          <span> WANNA BE STARTING SOMETHING? SAY HELLO </span>
         </div>
       </a>
 
@@ -215,22 +262,34 @@
 
         <div class="f-links">
           <span
-            ><a href="https://twitter.com/bernardEzra2" target="_blank" rel="noopener noreferrer"
+            ><a
+              href="https://twitter.com/bernardEzra2"
+              target="_blank"
+              rel="noopener noreferrer"
               >TWITTER</a
             ></span
           >
           <span
-            ><a href="https://www.linkedin.com/in/ezra-soukou-b2941b240" target="_blank" rel="noopener noreferrer"
+            ><a
+              href="https://www.linkedin.com/in/ezra-soukou-b2941b240"
+              target="_blank"
+              rel="noopener noreferrer"
               >LINKEDN</a
             ></span
           >
           <span
-            ><a href="https://github.com/just-ez" target="_blank" rel="noopener noreferrer"
+            ><a
+              href="https://github.com/just-ez"
+              target="_blank"
+              rel="noopener noreferrer"
               >GITHUB</a
             ></span
           >
           <span
-            ><a href="https://www.instagram.com/ezthedevelop3r/" target="_blank" rel="noopener noreferrer"
+            ><a
+              href="https://www.instagram.com/ezthedevelop3r/"
+              target="_blank"
+              rel="noopener noreferrer"
               >INSTAGRAM</a
             ></span
           >
