--- a/index.html
+++ b/index.html
@@ -214,15 +214,14 @@
         <span class="w-header"> ARTME </span>
         <span class="line_right"></span>
       </a>
-      <a href="http://" target="_blank" rel="noopener noreferrer" class="box">
+      <a href="https://pebbles-signature.com/home" target="_blank" rel="noopener noreferrer" class="box">
         <div class="img">
-          <img src="./assets/artme1.png" alt="" />
+          <img src="./assets/pebbles (2).png" alt="" />
         </div>
         <span
-          >TJP IS A FREE TRAINING BOOTHCAMP FOR FRONT-END DEVELOPMENT AND UI/IX
-          - DESIGN</span
+          >Online Booking Platform (apartments, laundry, rides etc.)</span
         >
-        <span class="w-header"> THE JUST PROJECTS </span>
+        <span class="w-header"> PEBBLES SIGNATURES. </span>
         <span class="line_right"></span>
       </a>
     </section>
